--- a/WheelOfFate.ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/WheelOfFate.ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,32 +1,32 @@
 <mat-toolbar color="primary" class="docs-navbar-header mat-elevation-z6">
-  <mat-toolbar-row>
-    <a aria-label="Angular Material" class="docs-button mat-button" mat-button="" routerlink="/" tabindex="0" aria-disabled="false"
-      href="/">
-      <span class="mat-button-wrapper">
-        <mat-icon class="example-icon">filter_tilt_shift</mat-icon>
-        <span>Support Wheel of Fate</span>
-      </span>
-    </a>
-    <a class="docs-navbar-hide-small docs-button mat-button ng-star-inserted" mat-button="" tabindex="0" aria-disabled="false"
-      href="/rules">
-      <span class="mat-button-wrapper">Rules</span>
-      <div class="mat-button-ripple mat-ripple" matripple=""></div>
-      <div class="mat-button-focus-overlay"></div>
-    </a>
-    <a class="docs-navbar-hide-small docs-button mat-button ng-star-inserted" mat-button="" tabindex="0" aria-disabled="false"
-      href="/wheel-of-fate">
-      <span class="mat-button-wrapper">Generate Schedule</span>
-      <div class="mat-button-ripple mat-ripple" matripple=""></div>
-      <div class="mat-button-focus-overlay"></div>
-    </a>
-    <div class="example-spacer"></div>
-    <a aria-label="GitHub Repository" class="docs-button docs-navbar-hide-small mat-button" href="https://github.com/angular/material2"
-      mat-button="" tabindex="0" aria-disabled="false">
-      <span class="mat-button-wrapper">
-        <img alt="angular" class="docs-angular-logo" src="../../assets/github-circle-white-transparent.svg"> GitHub
-      </span>
-      <div class="mat-button-ripple mat-ripple" matripple=""></div>
-      <div class="mat-button-focus-overlay"></div>
-    </a>
-  </mat-toolbar-row>
+    <mat-toolbar-row>
+        <a aria-label="Angular Material" class="docs-button mat-button" mat-button="" routerlink="/" tabindex="0" aria-disabled="false"
+            href="/">
+            <span class="mat-button-wrapper">
+                <mat-icon class="example-icon">filter_tilt_shift</mat-icon>
+                <span>Support Wheel of Fate</span>
+            </span>
+        </a>
+        <a class="docs-navbar-hide-small docs-button mat-button ng-star-inserted" mat-button="" tabindex="0" aria-disabled="false"
+            href="/rules">
+            <span class="mat-button-wrapper">Rules</span>
+            <div class="mat-button-ripple mat-ripple" matripple=""></div>
+            <div class="mat-button-focus-overlay"></div>
+        </a>
+        <a class="docs-navbar-hide-small docs-button mat-button ng-star-inserted" mat-button="" tabindex="0" aria-disabled="false"
+            href="/wheel-of-fate">
+            <span class="mat-button-wrapper">Generate BAU Schedule</span>
+            <div class="mat-button-ripple mat-ripple" matripple=""></div>
+            <div class="mat-button-focus-overlay"></div>
+        </a>
+        <div class="example-spacer"></div>
+        <a aria-label="GitHub Repository" class="docs-button docs-navbar-hide-small mat-button" href="https://github.com/leohickstein/support-wheel-of-fate"
+            mat-button="" tabindex="0" aria-disabled="false">
+            <span class="mat-button-wrapper">
+                <img alt="angular" class="docs-angular-logo" src="../../assets/github-circle-white-transparent.svg"> GitHub
+            </span>
+            <div class="mat-button-ripple mat-ripple" matripple=""></div>
+            <div class="mat-button-focus-overlay"></div>
+        </a>
+    </mat-toolbar-row>
 </mat-toolbar>
