--- a/WheelOfFate.ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/WheelOfFate.ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -23,7 +23,7 @@
         <a aria-label="GitHub Repository" class="docs-button docs-navbar-hide-small mat-button" href="https://github.com/leohickstein/support-wheel-of-fate"
             mat-button="" tabindex="0" aria-disabled="false">
             <span class="mat-button-wrapper">
-                <img alt="angular" class="docs-angular-logo" src="../../assets/github-circle-white-transparent.svg"> GitHub
+                <img alt="wheel" src="../../assets/github-circle-white-transparent.svg"> GitHub
             </span>
             <div class="mat-button-ripple mat-ripple" matripple=""></div>
             <div class="mat-button-focus-overlay"></div>
